--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "scripts": {
-    "start": "concurrently \"npm:prod-*\"",
+    "start": "concurrently \"npm:cp-webpack\" \"npm:prod-*\"",
     "dev": "concurrently \"npm:dev-*\"",
-    "cp-webpack" : "cp client/webpack.config.js client/node_modules/react-scripts/config",
+    "cp-webpack": "cpx client/webpack.config.js client/node_modules/react-scripts/config",
     "prod-client": "cd client && npm i && npm start",
     "prod-server": "cd server && npm i && npm start",
     "dev-server": "cd server && npm run dev",
     "dev-client": "cd client && npm start"
   },
   "dependencies": {
-    "concurrently": "^8.2.2"
+    "concurrently": "^8.2.2",
+    "cpx": "^1.5.0"
   }
 }
