attempt 2 at cpx

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "scripts": {
-    "start": "concurrently \"npm:cp-webpack\" \"npm:prod-*\"",
+    "start": "concurrently \"npm:prod-*\"",
     "dev": "concurrently \"npm:dev-*\"",
     "cp-webpack": "cpx client/webpack.config.js client/node_modules/react-scripts/config",
-    "prod-client": "cd client && npm i && npm start",
+    "prod-client": "cd client && npm i && cpx client/webpack.config.js client/node_modules/react-scripts/config && npm start",
     "prod-server": "cd server && npm i && npm start",
     "dev-server": "cd server && npm run dev",
     "dev-client": "cd client && npm start"
