--- a/package.json
+++ b/package.json
@@ -1,10 +1,17 @@
 {
   "scripts": {
     "start": "concurrently \"npm:prod-*\"",
+    "build": "concurrently \"npm:prod-*\"",
     "dev": "concurrently \"npm:dev-*\"",
+
     "cp-webpack": "cpx \"client/webpack.config.js\" client/node_modules/react-scripts/config",
-    "prod-client": "cd client && npm i && cpy webpack.config.js node_modules/react-scripts/config && npm run build",
-    "prod-server": "cd server && npm i && npm start",
+
+    "start-client": "cd client && npm i && cpy webpack.config.js node_modules/react-scripts/config && npm start",
+    "start-server": "cd server && npm i && npm start",
+
+    "build-client": "cd client && npm i && cpy webpack.config.js node_modules/react-scripts/config && npm run build",
+    "build-server": "cd server && npm i && npm start",
+
     "dev-server": "cd server && npm run dev",
     "dev-client": "cd client && npm start"
   },
