--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "dependencies": {
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "nodemon": "^3.0.2",
     "socket.io": "^4.7.2"
   },
